# umc_tool

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  READNE.md  umc_tool.sln
lib/: umc_companyd.exp  umc_companyd.lib
umc_common/: umc_common.cpp  umc_common.h  umc_common.vcxproj  umc_common.vcxproj.filters  umc_logger.cpp  umc_logger.h  umc_opencv.cpp
umc_common/x64/Debug/: vc141.idb
umc_common/x64/Debug/umc_common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  umc_common.lastbuildstate  umc_common.write.1u.tlog
umc_company/: CMakeLists.txt  umc_company.cpp  umc_company.h  umc_company.vcxproj  umc_company.vcxproj.filters
umc_tool/: CMakeLists.txt  umc_adb.cpp  umc_adb.h  umc_android_overdraw  umc_tool.cpp  umc_tool.h  umc_tool.vcxproj  umc_tool.vcxproj.filters
x64/Debug/: umc_common.ilk
